# wallet-core

android/app/: build.gradle
android/app/src/androidTest/java/com/trustwallet/core/app/blockchains/: TestCoinType.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/trustwallet/core/app/: MainActivity.kt
rust/wallet_core_rs/src/: lib.rs
tools/: rust-modules-bindgen
wallet-modules/: Cargo.toml  build.rs  uniffi-bindgen.rs
wallet-modules/src/: lib.rs  wallet_modules.udl
wallet-modules/src/uniffi/wallet_modules/: wallet_modules.kt
