[package]
name = "wallet-modules"
version = "0.1.0"
edition = "2021"

[lib]
name = "wallet_modules"
#crate-type = ["staticlib", "rlib"] # Creates static lib
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
wallet-core-rs = { path = "../rust/wallet_core_rs" }
uniffi = { version = "0.23.0" }

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }
